components/game/player/player.module.css
.container{
    position: absolute;
    color: white;
    transform: translate(-50%, -50%);
    text-wrap: nowrap;
    width: 20%;
    
    padding: .5vw;
    max-height: 13%;
    border-radius: 1vw;
}
.overlay{
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-width: 100vh;
    min-height: 100vh;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 1;

}
.otherPlayer{
    position: absolute;
    width: fit-content;
    height: 20%;
    font-size: 48px;
}
.playerInfoContainer{
    background-color: rgb(50, 50, 50);
    position: relative;
    color: white;
    text-wrap: nowrap;
    padding: 5%;
    width: fit-content;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
}
.me{
    width: 20%;
    height: 20%;
    
}
.meInfoContainer{
    text-align: center;
    z-index: 5;
    top: 13%;
    width: 150%;
    height: 150%;
    position: absolute;
}
.myActualHand{
    color: red;
    font-weight: 700;
    position: relative;
    height: fit-content;
    top: -10%;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
    text-shadow:
        2px 2px 4px rgba(0, 0, 0, 0.5),
        -1px -1px 0 black,  
         1px -1px 0 black,
        -1px  1px 0 black,
         1px  1px 0 black;
    text-transform: uppercase;
    text-wrap: nowrap;
}
.playerInfo{

}
.MeInfo{
   
    background-color: rgb(50, 50, 50);
    color: white;
    text-wrap: nowrap;
    padding: .5vw;
    border-radius: 1vw;
}
.allIn{
    background-color: red;
    color:  white;
    border-radius: 100%;
}
.dealerMarker{
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    top: -40%;
    left: 70%;
    height: 50%;
    aspect-ratio: 1/1;
    text-align: center;
    border-radius: 100%;
    background-color: brown;
    transform: translateY(-50%);
}
.MydealerMarker{
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: brown;
    border-radius: 100%;
    height: 30%;
    left: -20%;
    top: 109%;
    left: 35%;
    aspect-ratio: 1/1;
    color: white;
}
.firstDealerMarker{
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    top: -40%;
    left: 100%;
    height: 50%;
    aspect-ratio: 1/1;
    text-align: center;
    border-radius: 100%;
    background-color: brown;
    transform: translateY(-50%);
}
.seventhDealerMarker{
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    top: -40%;
    left: -30%;
    height: 50%;
    aspect-ratio: 1/1;
    text-align: center;
    border-radius: 100%;
    background-color: brown;
    transform: translateY(-50%);
}
.chips{
    color: rgb(248, 240, 3);
}
.MymoneyInPotContainer{
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    background-color: rgba(155, 155, 155, 0.5);
}
.moneyInPot{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    /* transparent gray background */
    padding-inline: 5%;
    width: 100%;
    background-color: rgba(155, 155, 155, 0.5);
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
}

.myMoneyInPot{
    color: white;  
    left: 30%;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
}

.turnMarker{
    position: absolute;
    font-size: 2.5%;
    top: 50%;
    left: -20%;
    transform: translateY(-50%) translateX(-120%);
    z-index: 2;
}
.otherChipAndBet{
    width: 100%;
    display: flex;
    height: fit-content;
    justify-content: center;
    align-items: center;
    position: relative;
    left: 0%;
    top: 0%;
}
.chipImageContainer{
    position: relative;
    width: auto;
    height: 100%;
    margin-right: 5%;
    display: flex;
    justify-content: center;
    align-items: center;
    left: 0%;
    width: 20%;
    aspect-ratio: 1/1;

}
.chipImage{
    width: 100%;
    height: 100%;
    transform: translateY(5%);
}
.otherBet{
    display: inline;
}
.MyChipImage{
    position: relative;
    width: 12%;
    transform: translateY(3%);
    margin-right: 3%;
    z-index: 1;
}
.chipBackground{
    position: absolute;
    width: 2.8vw;
    height: 2.8vw;
    left: -55%;
    top: 10%;
    border-radius: 100%;
}
.MychipBackground{
    position: absolute;
    width: 2.8vw;
    height: 2.8vw;
    left: -55%;
    top: 15%;
    border-radius: 100%;
}
.chipBlue{
    background-color: blue;
    color: white;

}
.myChipBlue{
    position: absolute;
    background-color: blue;
    color: white;
    left: -54%;
    top: 16%
}

.playerContainer{
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
}
.pocketContainer{
    height: 100%;
    width: 40%;
    position: relative;
    z-index: 0;
}
.pocket{
    display: flex;
    position: relative;
    height: auto;
    width: 100%;
    justify-content: center;
    top: 0%;
    height: 10%
}
.pocketCard{
    position: absolute;
    z-index: 2;
    max-width: 200%;
    width: 60%;
    height: auto;
}
.pocketCardComplete{
    width: 150%;

}
.pocketCard1{
    transform: translateX(-20%) rotate(-5deg);
}
.pocketCard2{
    transform: translateX(20%) rotate(5deg);
}

.myPocket{
    display: flex;
    width: 100%;
    height: 200%;
    justify-content: center;
    z-index: 2;
    
}
.myPocketCard{
    width: 120%;
    top: 50%;
    height: fit-content;
    
}
.myPocketCard1{
    transform: translateX(-20%) rotate(-5deg);
    position: absolute;
}
.myPocketCard2{
    transform: translateX(20%) rotate(5deg);
    position: absolute;
}
.actualHand{
    position: absolute;
    color: red;
    text-align: center;
    top: -200%;
    height: fit-content;
    width: 400%;
    z-index: 5;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
    text-shadow:
        2px 2px 4px rgba(0, 0, 0, 0.5),
        -1px -1px 0 black,  
         1px -1px 0 black,
        -1px  1px 0 black,
         1px  1px 0 black;
}
.yellowHalo{
    box-shadow: 0 0 10px 15px yellow;
}
.action{
    min-height: 5%;
    text-wrap: nowrap;
    color: rgb(255, 132, 0);
    font-weight: bold;
    padding: 0px;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
    
}
.folded{
    opacity: .6;
    color: blue
}
.meFolded{
    position: absolute;
    z-index: 10;
    color: blue;
    font-weight: 700;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
    top: 50%;
    left: 12%;
}
.buyBack{
    
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.3);
    z-index: 1;
    transform: translateX(-50%);

}
.buyBackForm input{
    position: absolute;
    width: 200%;
}

